--- a/components/common/Layout/Layout.module.css
+++ b/components/common/Layout/Layout.module.css
@@ -2,6 +2,6 @@
   @apply h-full mx-auto;
   max-width: 2460px;
   /* background-color: var(--green); */
-  background-color: theme("colors.green");
+  /* background-color: theme("colors.green"); */
   color: theme("textColor.base");
 }
